[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecated tensorflow and 3rd party.
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
branch = true
source = ["ad_toolkit"]

[tool.coverage.report]
show_missing = true
